--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,75 +1,18 @@
-version: '3.7'
-
+version: '3'
 services:
-  elasticsearch:
-    build:
-      context: elk/elasticsearch/
-      args:
-        ELK_VERSION: $ELK_VERSION
-    volumes:
-      - type: bind
-        source: ./elk/elasticsearch/config/elasticsearch.yml
-        target: /usr/share/elasticsearch/config/elasticsearch.yml
-        read_only: true
+  mongodb:
+    image: mongo:3.4.0
+    container_name: mongodb
     ports:
-      - "9200:9200"
-      - "9300:9300"
-    environment:
-      ES_JAVA_OPTS: "-Xmx256m -Xms256m"
-      ELASTIC_PASSWORD: changeme
-      # Use single node discovery in order to disable production mode and avoid bootstrap checks
-      # see https://www.elastic.co/guide/en/elasticsearch/reference/current/bootstrap-checks.html
-      discovery.type: single-node
-    networks:
-      - elk
+      - 27017:27017
 
-  logstash:
-    build:
-      context: elk/logstash/
-      args:
-        ELK_VERSION: $ELK_VERSION
-    command: logstash -f /usr/share/logstash/pipeline/logstash.conf
-    volumes:
-      - type: bind
-        source: ./elk/logstash/config/logstash.yml
-        target: /usr/share/logstash/config/logstash.yml
-        read_only: true
-      - type: bind
-        source: ./elk/logstash/pipeline
-        target: /usr/share/logstash/pipeline
-        read_only: true
-      - ./elk/dataset:/usr/share/elasticsearch/data
-    ports:
-      - "5000:5000/tcp"
-      - "5000:5000/udp"
-      - "9600:9600"
-    environment:
-      LS_JAVA_OPTS: "-Xmx256m -Xms256m"
-    networks:
-      - elk
+  mongo_seed:
+    image: mongo:3.4.0
     depends_on:
-      - elasticsearch
-
-  kibana:
-    build:
-      context: elk/kibana/
-      args:
-        ELK_VERSION: $ELK_VERSION
+      - mongodb
+    links:
+      - mongodb
     volumes:
-      - type: bind
-        source: ./elk/kibana/config/kibana.yml
-        target: /usr/share/kibana/config/kibana.yml
-        read_only: true
-    ports:
-      - "5601:5601"
-    networks:
-      - elk
-    depends_on:
-      - elasticsearch
-
-networks:
-  elk:
-    driver: bridge
-
-volumes:
-  elasticsearch:
+      - ./mongo-seed:/mongo-seed
+    command:
+      /mongo/import.sh
